# MORPH

./: Cargo.toml  README.md
scripts/: 0000-foundation.sh  0001-phase-1.sh  0002-phase-2.sh  0003-phase-3.sh  0004-phase-4.sh  0005-phase-5.sh  0006-phase-6.sh  0007-phase-7.sh  0016-phase-16.sh  0017-phase-17.sh  0018-phase-18.sh
src/: lib.rs  main.rs
src/bidirectional_compiler/: adjoint_invariance.rs  bottom_up.rs  compiler_test.rs  mod.rs  top_down.rs
src/consciousness/: consciousness_test.rs  mod.rs
src/consciousness_metrics/: metrics_test.rs  mod.rs
src/core/: mod.rs  tensor.rs  tensor_impl.rs
src/demo/: mod.rs  quantum_env.rs  training.rs
src/distributed/: mod.rs  orchestration_test.rs
src/environment/: mod.rs
src/evolutionary/: mod.rs  optimization_test.rs
src/field_stabilization/: field_test.rs  integration.rs  mod.rs
src/hardware/: hardware_test.rs  mod.rs
src/hippocampus/: hippocampal_test.rs  index.rs  memory.rs  mod.rs  oscillation.rs  pattern_completion.rs
src/learning/: mod.rs  tensor_integration.rs
src/phylogenetic/: delta.rs  forking.rs  mod.rs  runtime_test.rs  selection.rs
src/quantum/: mod.rs  qasm.rs  state.rs
src/quantum_classical/: bridge_test.rs  mod.rs
src/quantum_integration/: integration_test.rs  mod.rs
src/quantum_simulation/: mod.rs  simulation_test.rs
src/system_manifestation/: manifestation_test.rs  mod.rs
