[package]
name = "morph"
version = "0.1.0"
edition = "2021"

[dependencies]
kiddo = "4.0.1"
rayon = "1.9.0"               # Parallel processing
nalgebra = "0.32.3"           # Tensor operations
serde = { version = "1.0", features = ["derive"] } # Serialization
spade = "2.1.0"               # Spatial indexing (for hippocampal mapping)

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace]
members = ["."]

[[bin]]
name = "tensor_impl"
path = "src/core/tensor_impl.rs"

[[bin]]
name = "hippocampal_test"
path = "src/hippocampus/hippocampal_test.rs"

[[bin]]
name = "compiler_test"
path = "src/bidirectional_compiler/compiler_test.rs"

[[bin]]
name = "runtime_test"
path = "src/phylogenetic/runtime_test.rs"

[[bin]]
name = "field_test"
path = "src/field_stabilization/field_test.rs"

[[bin]]
name = "integration_test"
path = "src/quantum_integration/integration_test.rs"

[[bin]]
name = "consciousness_test"
path = "src/consciousness/consciousness_test.rs"
